--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Heart Disease Prediction</title>
+    <title>LUNG CANCER Prediction</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -41,7 +41,7 @@
 </head>
 <body>
     <div class="form-container">
-        <h2>Heart Disease Prediction</h2>
+        <h2>LUNG CANCER Prediction</h2>
         <form action="/predict" method="post">
 
             <label for="GENDER">Gender(Male or Female):</label>
@@ -62,32 +62,32 @@
             <label for="PEER_PRESSURE">Peer Pressure (Yes or No):</label>
             <input type="character" name="PEER_PRESSURE" required>
 
-            <label for="CHRONIC_DISEASE">Chronic Disease (Yes or No):</label>
-            <input type="character" name="CHRONIC_DISEASE" required>
+            <label for="CHRONIC DISEASE">Chronic Disease (Yes or No):</label>
+            <input type="character" name="CHRONIC DISEASE" required>
 
-            <label for="FATIGUE">Fatigue (Yes or No):</label>
-            <input type="character" name="FATIGUE" required>
+            <label for="Fatigue">Fatigue (Yes or No):</label>
+            <input type="character" name="Fatigue" required>
 
-            <label for="ALLERGY">Allergy (Yes or No):</label>
-            <input type="character" name="ALLERGY" required>
+            <label for="Allergy">Allergy (Yes or No):</label>
+            <input type="character" name="Allergy" required>
 
             <label for="WHEEZING">Wheezing (Yes or No):</label>
             <input type="character"  name="WHEEZING" required>
 
-            <label for="ALCOHOL_CONSUMING">Alchohol Consuming (Yes or No):</label>
-            <input type="character" name="ALCOHOL_CONSUMING" required>
+            <label for="ALCOHOL CONSUMING">Alchohol Consuming (Yes or No):</label>
+            <input type="character" name="ALCOHOL CONSUMING" required>
 
             <label for="COUGHING">Coughing (Yes or No):</label>
             <input type="character" name="COUGHING" required>
 
-            <label for="SHORTNESS_OF_BREATH">Shortness Of Breath (Yes or No):</label>
-            <input type="character" name="SHORTNESS_OF_BREATH" required>
+            <label for="SHORTNESS OF BREATH">Shortness Of Breath (Yes or No):</label>
+            <input type="character" name="SHORTNESS OF BREATH" required>
 
-            <label for="SWALLOWING_DIFFICULTY">Swallowing Difficulty (Yes or No):</label>
-            <input type="character" name="SWALLOWING_DIFFICULTY" required>
+            <label for="SWALLOWING DIFFICULTY">Swallowing Difficulty (Yes or No):</label>
+            <input type="character" name="SWALLOWING DIFFICULTY" required>
 
-            <label for="CHEST_PAIN">Chest Pain (Yes or No):</label>
-            <input type="character" name="CHEST_PAIN" required>
+            <label for="CHEST PAIN">Chest Pain (Yes or No):</label>
+            <input type="character" name="CHEST PAIN" required>
 
 
              <input type="submit" value="Predict">
